# OpenGL

./: CMakeLists.txt
res/shaders/: basic.shader
src/: debug.cpp  debug.h  indexBuffer.cpp  indexBuffer.h  main.cpp  renderer.cpp  renderer.h  shader.cpp  shader.h  vertexArray.cpp  vertexArray.h  vertexBuffer.cpp  vertexBuffer.h  vertexBufferLayout.h
